problem with file storage

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 SECRET_KEY="ad8f0478fcfb67ffa1df4d3fca2247e5"
-UPLOAD_FOLDER="./assets/images"
+UPLOAD_FOLDER="../src/app/assets/recipe-images"
+PROFILE_UPLOAD_FOLDER="./src/assets/user-images"
