--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@paypal/paypal-js": "^5.1.4",
     "ngx-cookie-service": "^15.0.0",
     "ngx-editor": "^15.1.0",
     "ngx-paypal": "^11.0.0",
